# HW_2

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  README.md  README.rst
project/include/: foo.h
project/src/: foo.c  main.c
tests/: main.cpp
